sass/layout/_hero.scss
@use "../abstracts" as ab;

.hero {
  position: relative;
  min-height: 100dvh;
  background-image: linear-gradient(0deg, rgba(17, 17, 17, 1) 0%, rgba(17, 17, 17, 1) 9%, rgba(17, 17, 17, 0.48) 35%, rgba(17, 17, 17, 0) 100%), url(../assets/images/hero_2.webp);
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
  padding: 0 30px;

  &__wrapper {
    display: flex;
    flex-direction: column;
    justify-content: center;
    height: 100dvh;
  }

  &__content {
    display: flex;
    flex-direction: column;
    flex-wrap: nowrap;
    align-items: center;
    justify-content: center;
    margin: auto 0;
    color: ab.color(font-light);
  }

  &__title {
    position: relative;
    min-height: 62px;
    text-align: center;
    text-wrap: balance;
    font-size: 2.5rem;
    @include ab.respond(s) {
      font-size: 3.25rem;
      // height: 130px;
    }
    @include ab.respond(m) {
      font-size: 4rem;
      // min-height: 160px;
    }
    @include ab.respond(l) {
      font-size: 4.825rem;
      min-height: 190px;
    }
    @include ab.respond(xl) {
      font-size: 4rem;
      min-height: 80px;
    }
  }

  &__name {
    position: relative;
    min-height: 62px;
    font-size: 1.825rem;
    @media (min-width: 360px) {
      font-size: 2.4rem;
    }
    @include ab.respond(s) {
      font-size: 3.5rem;
    }
    @include ab.respond(m) {
      font-size: 4.2rem;
    }
    @include ab.respond(l) {
      font-size: 5rem;
    }
    @include ab.respond(xl) {
      font-size: 4.825rem;
    }
  }

  &__excerpt {
    min-height: 32px;
    margin-top: 10px;
    font-size: 2rem;
    margin-bottom: 4rem;
    text-align: center;
    &--small {
      position: relative;
    }
    @include ab.respond(s) {
      font-size: 2.825rem;
    }
    @include ab.respond(l) {
      font-size: 4.5rem;
    }
    @include ab.respond(xl) {
      font-size: 5rem;
    }
  }

  &__scroll {
    display: block;
    padding-bottom: 50px;
    color: ab.color(font-light);
    text-align: center;
    margin-top: auto;
    &--icon {
      position: absolute;
      @include ab.icon(circle-left, after) {
        display: inline-block;
        position: absolute;
        font-size: 2rem;
        transform: rotate(-90deg);
        right: 27px;
        top: 20px;
      }
    }
    &:visited {
      color: ab.color(font-light);
    }
  }
}

@mixin type-bar {
  &::after {
    content: "\A0";
    position: absolute;
    right: -10px;
    font-size: inherit;
    border-right: 3px solid ab.color(font-light);
    animation: blink 1.3s step-end infinite;

    top: 6px;
    // height: 100%;
    height: 1.1em;
    @content;
  }
}

.tw-bar {
  @include type-bar{
  };
}

@keyframes blink {
  50% { opacity: 0; }
}

